--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
         "watch": "npm-watch",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "server": "ts-node ./server"
+        "lint": "next lint"
     },
     "dependencies": {
         "next": "12.0.4",
