--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "build": "concurrently \"cd client && npm run build\" \"cd server && npm run build\"",
         "deps": "concurrently \"cd client && npm ci\" \"cd server && npm ci\"",
         "dev": "concurrently \"cd client && npm run watch\" \" cd server && npm run dev\"",
-        "prod": "cd server && node index.js",
+        "prod": "node server/dist",
         "eslint": "eslint -c .eslintrc.json ."
     },
     "dependencies": {
