change script name to obv

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "next-express",
     "scripts": {
         "build": "concurrently \"cd client && npm run build\" \"cd server && npm run build\"",
-        "deps": "concurrently \"cd client && npm ci\" \"cd server && npm ci\"",
+        "install": "concurrently \"cd client && npm ci\" \"cd server && npm ci\"",
         "dev": "concurrently \"cd client && npm run watch\" \" cd server && npm run dev\"",
         "prod": "cd server && node .",
         "eslint": "eslint -c .eslintrc.json ."
