--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,17 @@
 {
     "name": "server",
     "scripts": {
-        "dev": "nodemon index.ts",
+        "dev": "cd src && ts-node-dev index.ts",
         "build": "tsc"
     },
     "dependencies": {
         "@types/express": "^4.17.13",
-        "express": "^4.17.1",
-        "next": "file:../client/node_modules/next/"
+        "express": "^4.17.2",
+        "next": "12.0.8"
     },
     "devDependencies": {
-        "@types/node": "^16.11.10",
-        "nodemon": "^2.0.15",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.2"
+        "@types/node": "^17.0.10",
+        "typescript": "^4.5.5",
+        "ts-node-dev": "^1.1.8"
     }
 }
