--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "next-express",
     "engines": {
-        "node": "<17"
+        "node": "<17 >15"
     },
     "scripts": {
         "build": "concurrently \"cd client && npm run build\" \"cd server && npm run build\"",
